[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "lad-markdown-viewer"
dynamic = ["version"]
description = "一个功能强大的Markdown查看器，支持Web和桌面应用"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "LAD Markdown Viewer Contributors", email = "kositguo@gmail.com"}
]
maintainers = [
    {name = "LAD Markdown Viewer Contributors", email = "kositguo@gmail.com"}
]
keywords = ["markdown", "viewer", "renderer", "html", "desktop", "web", "gui", "qt", "flask", "mermaid", "yaml", "toc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: Markup",
    "Topic :: Software Development :: Documentation",
    "Topic :: Desktop Environment",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.7"
dependencies = [
    "mistune>=2.0.0",
    "flask>=2.0.0",
    "flask-cors>=3.0.0",
    "pyyaml>=5.4.0",
]

[project.optional-dependencies]
desktop = [
    "PyQt5>=5.15.0",
    "PyQtWebEngine>=5.15.0",
]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "pytest-html>=3.0.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.800",
]
web = [
    "flask>=2.0.0",
    "flask-cors>=3.0.0",
]

[project.scripts]
lad-markdown-viewer = "lad_markdown_viewer.ladmark_viewer:main"
lad-markdown-web = "lad_markdown_viewer.web_viewer:main"

[project.urls]
Homepage = "https://github.com/lad-markdown-viewer/lad-markdown-viewer"
Documentation = "https://github.com/lad-markdown-viewer/lad-markdown-viewer/blob/main/README.md"
Repository = "https://github.com/lad-markdown-viewer/lad-markdown-viewer"
"Bug Tracker" = "https://github.com/lad-markdown-viewer/lad-markdown-viewer/issues"
Changelog = "https://github.com/lad-markdown-viewer/lad-markdown-viewer/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["lad_markdown_viewer"]

[tool.setuptools.package-data]
lad_markdown_viewer = ["*.md", "*.txt", "*.html"]

[tool.setuptools.dynamic]
version = {attr = "lad_markdown_viewer.__version__"}

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg",
]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["lad_markdown_viewer"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
] 